--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,8 @@ fonts
  ------------*/
 
 :root {
-    --main-color: #B07E4B;
-    --dark: #FCEFDE;
+    --main-color: #BC9646;
+    --dark: #fff3d8;
     --dark-light: #693C12;
     --white: #ffffff;
     --white-light: #c8c8c8;
